add background color

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     justify-content: center;
     font-family: 'Open Sans', sans-serif;
-    background-color: #F5F6FA;
+    background-color: #e67e22;
     font-size: 14px;
     vertical-align:middle;
     height: 100vh;
